--- a/css/custom.css
+++ b/css/custom.css
@@ -1,10 +1,10 @@
 .table__body {
-  transition: opacity 0.5s ease;
+  transition: opacity 0.5s ease, background-color 0.5s ease;
 }
 
 .task-table__row {
   position: relative;
-  transition: opacity 0.2s ease, background-color 0.2s ease;
+  transition: opacity 0.5s ease, background-color 0.5s ease;
 }
 
 .table__body:hover .task-table__row--link {
@@ -46,6 +46,10 @@
 
 .button-edit {
   color: #007bff;
+}
+
+.custom-select {
+  cursor: pointer;
 }
 
 /* .button-delete__link::before  {
